<resources>
    <string name="app_name">Webinar20</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="state_flow_label">State Flow showcase</string>
    <string name="main_label">Webinar 20</string>
    <string name="callback_fragment_label">Callback showcase</string>
    <string name="shared_state_fragment_label">Mutable shared state showcase</string>
    <string name="some_fragment_label">SomeFragment showcase</string>
    <string name="flow_usage_fragment_label">FlowUsageFragment showcase</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>